@@ -58,39 +58,39 @@ void ConfigureButton::createMenu ()
   setMenu(_menu);
 
   // new indicator
-  QAction *a = _menu->addAction(tr("&New Indicator..."));
+  QAction *a = _menu->addAction(tr("&New Indicator") + "...");
   a->setIcon(QIcon(indicator_xpm));
-  a->setShortcut(QKeySequence(Qt::CTRL+Qt::Key_N));
-  a->setToolTip(tr("Add New Indicator"));
-  a->setStatusTip(QString(tr("Add New Indicator")));
+//  a->setShortcut(QKeySequence(Qt::CTRL+Qt::Key_N));
+  a->setToolTip(tr("Add New Indicator") + "...");
+  a->setStatusTip(tr("Add New Indicator") + "...");
   connect(a, SIGNAL(triggered(bool)), this, SLOT(newIndicator()));
 
   _menu->addSeparator();
 
   // configure
-  a = _menu->addAction(tr("&Configure..."));
+  a = _menu->addAction(tr("&Configure") + "...");
   a->setCheckable(FALSE);
   a->setIcon(QIcon(configure_xpm));
-  a->setStatusTip(tr("Configure settings..."));
-  a->setToolTip(tr("Configure settings..."));
+  a->setStatusTip(tr("Configure settings") + "...");
+  a->setToolTip(tr("Configure settings") + "...");
   connect(a, SIGNAL(triggered(bool)), this, SLOT(configureDialog()));
 
   _menu->addSeparator();
   
   // help dialog
-  a = _menu->addAction(tr("&Help"));
+  a = _menu->addAction(tr("&Help") + "...");
   a->setCheckable(FALSE);
   a->setIcon(QIcon(help_xpm));
-  a->setStatusTip(tr("QtStalker help documentation..."));
-  a->setToolTip(tr("QtStalker help documentation..."));
+  a->setStatusTip(tr("QtStalker help documentation") + "...");
+  a->setToolTip(tr("QtStalker help documentation") + "...");
   connect(a, SIGNAL(triggered(bool)), this, SLOT(startDocumentation()));
 
   // about dialog
-  a = _menu->addAction(tr("&About"));
+  a = _menu->addAction(tr("&About") + "...");
   a->setCheckable(FALSE);
   a->setIcon(QIcon(about_xpm));
-  a->setStatusTip(tr("About QtStalker..."));
-  a->setToolTip(tr("About QtStalker..."));
+  a->setStatusTip(tr("About QtStalker") + "...");
+  a->setToolTip(tr("About QtStalker") + "...");
   connect(a, SIGNAL(triggered(bool)), this, SLOT(aboutDialog()));
 
   _menu->addSeparator();
